@@ -5,6 +5,7 @@ Changes in current version:
  o bufferevent_write now uses a const source argument; report from Charles Kerr
  o improve documentation on event_base_loopexit; patch from Scott Lamb
  o New function, event_{base_}loopbreak.  Like event_loopexit, it makes an event loop stop executing and return.  Unlike event_loopexit, it keeps subsequent pending events from getting executed.  Patch from Scott Lamb
+ o provide event_reinit() to reintialize an event_base after fork
 
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
